Issue #28131: Fix a regression in zipimport's compile_source()

zipimport should use the same optimization level as the interpreter.